# openbo

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: benchmark.yaml
configs/family_splits/: ackley_split.json  branin_split.json  branin_split_10.json  branin_split_15.json  branin_split_20.json  hartmann6_split.json  sphere_split.json
configs/methods/: bo_botorch.yaml  bo_scratch.yaml  conbo.yaml  naf.yaml  pbo.yaml  random.yaml  taf.yaml  taf_pbo.yaml
configs/server_optimizers/: bo_server_scratch.yaml  bo_server_scratch_manual.yaml  bo_taf_server.yaml  bo_taf_server_manual.yaml  bo_taf_server_test_end_to_end.yaml  bo_taf_server_train_end_to_end.yaml
meta-bo-training/my_manual_taf_run/gp_states/: train_task_000.json  train_task_001.json  train_task_003.json  train_task_004.json  train_task_007.json  train_task_008.json  train_task_009.json  (+4 more)
notebooks/: 01_bo_from_scratch.ipynb
scripts/: aggregate_results.py  create_family_split.py  plot_family_from_benchmark_runs.py  plot_family_results.py  plot_results.py  plot_taf_acquisition_heatmap.py  plot_taf_gp_predictions.py  run_benchmark.py  run_family_benchmark.py  train_taf.py
server_scripts/: plot_manual_family_trajectories.py  run_bo_server.py  run_botorch_fake_client.py  run_botorch_server.py  run_fake_client.py  run_manual_family_test_clients.py  run_manual_family_train_clients.py  run_taf_server.py
src/metabo/: __init__.py
src/open_meta_bo/: __init__.py
src/openbo/: __init__.py
tests/: acquisition_test.py  gp_scratch_test.py  server_botorch_test.py  server_taf_test.py  test_functions_test.py
(+167 files in other folders)
