[project]
name = "open-bo"
version = "0.1.0"
description = "Research and teaching library for OpenBO"
readme = "README.md"
authors = [
    { name = "yichiliao", email = "imetliao@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.17.2",
    "gpytorch>=1.15.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "openbo"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
